# backend-test

./: .gitignore  pyproject.toml
alunos/: urls.py  views.py
alunos/migrations/: 0001_initial.py  0002_cidade.py  0003_aluno.py
clientes/: admin.py  models.py  serializers.py  views.py
clientes/migrations/: 0001_initial.py
config/: settings.py  urls.py
